@@ -121,6 +121,9 @@
           <printer>printer/Kyocera-FS-9000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Lexmark-E230</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Oki-Okipage_10ex</printer>
         </constraint>
         <constraint sense="false">
@@ -184,6 +187,9 @@
         </constraint>
         <constraint sense="false">
           <make>Kyocera</make>
+        </constraint>
+        <constraint sense="false">
+          <printer>printer/Lexmark-E230</printer>
         </constraint>
         <constraint sense="false">
           <printer>printer/Oki-Okipage_10ex</printer>
