@@ -93,6 +93,9 @@
         <constraint sense="false">
           <driver>pxldpl</driver>
         </constraint>
+        <constraint sense="false">
+          <printer>printer/Lexmark-E230</printer>
+        </constraint>
       </constraints>
     </enum_val>
     <enum_val id="ev/pxlmono-PrintoutMode-High-ColorPrinter">
