@@ -1,5 +1,12 @@
 2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* opt/159.xml, opt/pxlmono-PrinterResolution.xml,
+	  opt/pxlmono-PrintoutMode.xml: The Lexmark E230 has only 600 dpi
+	  maximum resolution, removed the 1200-dpi entries (Ubuntu bug
+	  #1335561).
+
+2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>
+
 	* driver/brlaser.xml: Added new "brlaser" driver for Brother DCP
 	  laser printers.
 	* printer/Brother-DCP-7030.xml, printer/Brother-DCP-7065DN.xml:
